Fix HTML structure and clean up formatting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="sidebar">
-<img src="images/quecera.jpg">
+<img src="/Task-6_Dark_Theme/images/quecera.jpg">
 
 <a href="#" class="navbar active"><i class="fa fa-home"></i><p>HOME</p></a>
 <a href="#about" class="navbar"><i class="fa fa-user"></i><p>ABOUT</p></a>
@@ -241,3 +241,4 @@
 
 </body>
 <html>
+
