--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="sidebar">
-<img src="/Task-6_Dark_Theme/images/quecera.jpg">
+<img src="/images/quecera.jpg">
 
 <a href="#" class="navbar active"><i class="fa fa-home"></i><p>HOME</p></a>
 <a href="#about" class="navbar"><i class="fa fa-user"></i><p>ABOUT</p></a>
@@ -241,4 +241,5 @@
 
 </body>
 <html>
+
 
